increase max-width to avoid truncating hint in header search

--- a/app/assets/stylesheets/dsfr.scss
+++ b/app/assets/stylesheets/dsfr.scss
@@ -200,10 +200,10 @@ input[type='radio'] {
   margin-bottom: 0;
 }
 
-// We increase from 3rem the max-width to avoid truncating hint in header search
+// We increase from 6rem the max-width to avoid truncating hint in header search
 @media (min-width: 62em) {
   .fr-header__tools .fr-header__search {
-    max-width: 27rem;
+    max-width: 30rem;
   }
 }
 
